Bug 21969 - ICE on float __attribute__((vector_size(2048)))
Summary: ICE on float __attribute__((vector_size(2048)))
Status: RESOLVED FIXED
Alias: None
Product: gcc
Classification: Unclassified
Component: middle-end (show other bugs)
Version: 4.1.0
: P2 normal
Target Milestone: 4.1.0
Assignee: Not yet assigned to anyone
URL: http://gcc.gnu.org/ml/gcc-patches/200...
Keywords: ice-on-valid-code, patch
Depends on:
Blocks:
 
Reported: 2005-06-08 20:13 UTC by Steve Ellcey
Modified: 2005-06-29 16:42 UTC (History)
1 user (show)

See Also:
Host:
Target: ia64-hp-hpux11.23
Build:
Known to work:
Known to fail: 4.0.0 4.1.0
Last reconfirmed: 2005-06-09 14:40:30


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Steve Ellcey 2005-06-08 20:13:56 UTC
The following one line program gives an ICE

typedef float vsf __attribute__((vector_size(2048)));

x.c:1: internal compiler error: in round_up, at fold-const.c:11646

I reproduced this on IA64 and HPPA platforms and I do not think it is platform
specific.
Comment 1 Andrew Pinski 2005-06-09 14:40:30 UTC
Hmm, it works just fine on powerpc-darwin (I don't know why) but it ICEs on i686-pc-linux-gnu.

And it worked just fine with "gcc version 3.5.0 20040909 (experimental)"

I don't know if I can consider this a regression though, before 4.0.0 we gave an error:
t.c:1: error: no vector mode with the size and type specified could be found
Comment 2 GCC Commits 2005-06-29 15:35:04 UTC
Subject: Bug 21969

CVSROOT:	/cvs/gcc
Module name:	gcc
Changes by:	sje@gcc.gnu.org	2005-06-29 15:34:58

Modified files:
	gcc            : ChangeLog tree.c tree.h tree-vect-transform.c 

Log message:
	PR middle-end/21969
	* tree.h (TYPE_VECTOR_SUBPARTS): Change to shift expression.
	(SET_TYPE_VECTOR_SUBPARTS): New.
	* tree.c (make_vector_type): Replace TYPE_VECTOR_SUBPARTS with
	SET_TYPE_VECTOR_SUBPARTS.
	* tree-vect-transform.c (vect_transform_loop): Add cast.

Patches:
http://gcc.gnu.org/cgi-bin/cvsweb.cgi/gcc/gcc/ChangeLog.diff?cvsroot=gcc&r1=2.9275&r2=2.9276
http://gcc.gnu.org/cgi-bin/cvsweb.cgi/gcc/gcc/tree.c.diff?cvsroot=gcc&r1=1.489&r2=1.490
http://gcc.gnu.org/cgi-bin/cvsweb.cgi/gcc/gcc/tree.h.diff?cvsroot=gcc&r1=1.741&r2=1.742
http://gcc.gnu.org/cgi-bin/cvsweb.cgi/gcc/gcc/tree-vect-transform.c.diff?cvsroot=gcc&r1=2.33&r2=2.34

Comment 3 GCC Commits 2005-06-29 15:38:51 UTC
Subject: Bug 21969

CVSROOT:	/cvs/gcc
Module name:	gcc
Changes by:	sje@gcc.gnu.org	2005-06-29 15:38:34

Modified files:
	gcc/testsuite  : ChangeLog 
Added files:
	gcc/testsuite/gcc.dg/vect: pr21969.c 

Log message:
	PR middle-end/21969
	* gcc.dg/vect/pr21969.c: New test.

Patches:
http://gcc.gnu.org/cgi-bin/cvsweb.cgi/gcc/gcc/testsuite/ChangeLog.diff?cvsroot=gcc&r1=1.5703&r2=1.5704
http://gcc.gnu.org/cgi-bin/cvsweb.cgi/gcc/gcc/testsuite/gcc.dg/vect/pr21969.c.diff?cvsroot=gcc&r1=NONE&r2=1.1

Comment 4 GCC Commits 2005-06-29 16:16:22 UTC
Subject: Bug 21969

CVSROOT:	/cvs/gcc
Module name:	gcc
Changes by:	sje@gcc.gnu.org	2005-06-29 16:15:41

Modified files:
	gcc/testsuite  : ChangeLog 
	gcc/testsuite/gcc.dg/torture: pr21817-1.c 

Log message:
	PR testsuite/21969
	* gcc.dg/torture/pr21817.c: Use -fno-common for hppa*-*-* targets.

Patches:
http://gcc.gnu.org/cgi-bin/cvsweb.cgi/gcc/gcc/testsuite/ChangeLog.diff?cvsroot=gcc&r1=1.5704&r2=1.5705
http://gcc.gnu.org/cgi-bin/cvsweb.cgi/gcc/gcc/testsuite/gcc.dg/torture/pr21817-1.c.diff?cvsroot=gcc&r1=1.2&r2=1.3

Comment 5 Steve Ellcey 2005-06-29 16:42:58 UTC
Ignore the second patch (it was commited with the wrong PR number in the
comments).  But the first patch does fix the problem.
Comment 6 GCC Commits 2005-07-19 20:28:05 UTC
Subject: Bug 21969

CVSROOT:	/cvs/gcc
Module name:	gcc
Branch: 	gcc-4_0-branch
Changes by:	sje@gcc.gnu.org	2005-07-19 20:28:00

Modified files:
	gcc/testsuite  : ChangeLog 
	gcc/testsuite/gcc.dg/torture: pr21817-1.c 

Log message:
	Backport from mainline.
	PR testsuite/21969
	* gcc.dg/torture/pr21817.c: Use -fno-common for hppa*-*-* targets.

Patches:
http://gcc.gnu.org/cgi-bin/cvsweb.cgi/gcc/gcc/testsuite/ChangeLog.diff?cvsroot=gcc&only_with_tag=gcc-4_0-branch&r1=1.5084.2.289&r2=1.5084.2.290
http://gcc.gnu.org/cgi-bin/cvsweb.cgi/gcc/gcc/testsuite/gcc.dg/torture/pr21817-1.c.diff?cvsroot=gcc&only_with_tag=gcc-4_0-branch&r1=1.1.2.1&r2=1.1.2.2