	PR middle-end/21969 	* tree.h (TYPE_VECTOR_SUBPARTS): Change to shift expression. 	(SET_TYPE_VECTOR_SUBPARTS): New. 	* tree.c (make_vector_type): Replace TYPE_VECTOR_SUBPARTS with 	SET_TYPE_VECTOR_SUBPARTS. 	* tree-vect-transform.c (vect_transform_loop): Add cast.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@101423 138bc75d-0d04-0410-961f-82ee72b054a4